[package]
name = "tokio-debouncer"
version = "0.1.3"
edition = "2021"
description = "A minimal async debouncer for signal batching in Tokio"
repository = "https://github.com/yourname/tokio-debouncer"
documentation = "https://docs.rs/tokio-debouncer"
license = "MIT"
keywords = ["tokio", "debounce", "async", "signal", "batching"]
categories = ["asynchronous", "concurrency", "synchronization", "algorithms"]
readme = "README.md"

[dependencies]
tokio = { version = "^1", features = ["sync", "time", "test-util", "rt", "macros"] }
